<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DiabetesHelper</string>
    <string name="action_settings">Настройки</string>
    <string name="drawer_header">Header</string>
    <string name="drawer_item_additional_info">Полезная информация</string>
    <string name="drawer_item_reminder">Уведомления</string>
    <string name="drawer_item_home">Профиль</string>
    <string name="drawer_item_notes">Записи</string>
    <string name="drawer_item_settings">Настройки</string>
    <string name="drawer_item_help">Помощь</string>
    <string name="drawer_item_contact_doctor">Написать лечащему врачу</string>

    <string name="new_note">Новая запись</string>

    <string name="date">Дата рождения</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>

    <string name="glucose">Глюкоза</string>
    <string name="bread_units">ХЕ</string>
    <string name="insulin_basal">Инсулин (базальный)</string>
    <string name="insulin_bolus">Инсулин (болюсный)</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="first_fragment_start">Starting page</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
