<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="100dp" android:layout_margin="8dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/textDate"/>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textGlucose" android:layout_weight="1"
                    android:textAlignment="center" android:textColor="@android:color/black" android:textSize="24sp"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textBreadUnits" android:layout_weight="1"
                    android:textAlignment="center" android:textColor="@android:color/black" android:textSize="24sp"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textInsulinBasal" android:layout_weight="1"
                    android:textAlignment="center" android:textColor="@android:color/black" android:textSize="24sp"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textInsulinBolus" android:layout_weight="1"
                    android:textAlignment="center" android:textColor="@android:color/black" android:textSize="24sp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/glucose"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/hintGlucose" android:layout_weight="1"
                    android:textAlignment="center" android:singleLine="false"/>
            <TextView
                    android:text="@string/bread_units"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/hintBreadUnits" android:layout_weight="1"
                    android:textAlignment="center" android:singleLine="false"/>
            <TextView
                    android:text="@string/insulin_basal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/hintInsulinBasal" android:layout_weight="1"
                    android:textAlignment="center" android:singleLine="false"/>
            <TextView
                    android:text="@string/insulin_bolus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/hintInsulinBolus" android:layout_weight="1"
                    android:textAlignment="center" android:singleLine="false"/>
        </TableRow>
    </TableLayout>
</LinearLayout>