<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ProfileFragment">

    <EditText
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/surname"
            android:id="@+id/editSurname"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType=""
            tools:ignore="Autofill, LabelFor"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <EditText
            app:layout_constraintTop_toBottomOf="@id/editSurname"
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/name"
            tools:ignore="Autofill, LabelFor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

    <EditText
            app:layout_constraintTop_toBottomOf="@id/editName"
            android:id="@+id/editBirth"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/date"
            tools:ignore="Autofill, LabelFor"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    <!--<DatePicker-->
    <!--android:id="@+id/dateBirthPicker"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:datePickerMode="spinner"-->
    <!--android:calendarViewShown="false"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@id/editName"-->
    <!--/>-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_menu_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@android:drawable/ic_menu_edit"/>

</androidx.constraintlayout.widget.ConstraintLayout>
